--- a/onegov/winterthur/theme/styles/winterthur.scss
+++ b/onegov/winterthur/theme/styles/winterthur.scss
@@ -41,7 +41,8 @@ input[data-street-search]::placeholder {
         @include icon('\f0f6');
     }
 
-    .vehicles::before {
+    .vehicles::before,
+    .new-vehicle::before {
         @include icon('\f0f9');
     }
 }
@@ -338,10 +339,19 @@ input[data-street-search]::placeholder {
 */
 
 .datetimepicker {
-    background: $gray-light !important;
+    background: $primary-color !important;
     border: 0;
+    color: $white !important;
 
     &:hover {
-        color: $gray-dark !important;
+        background: darken($primary-color, 10%) !important;
     }
+}
+
+/*
+    Tables
+*/
+.min-width-column {
+    white-space: nowrap;
+    width: 1%;
 }
