--- a/onegov/winterthur/theme/styles/winterthur.scss
+++ b/onegov/winterthur/theme/styles/winterthur.scss
@@ -355,3 +355,73 @@ input[data-street-search]::placeholder {
     white-space: nowrap;
     width: 1%;
 }
+
+.valign-top {
+    th,
+    td {
+        vertical-align: top;
+    }
+}
+
+table.responsive {
+    @media #{$small-only} {
+        thead {
+            display: none;
+        }
+
+        tr {
+            display: block;
+            padding: 1.2em 0;
+            position: relative;
+        }
+
+        tr:first-of-type {
+            border-top: 1px solid $gray;
+        }
+
+        td {
+            display: table-row;
+
+            &::before {
+                content: attr(data-label);
+                display: table-cell;
+                font-weight: bold;
+                padding: .2em .6em .2em 0;
+                text-align: right;
+            }
+
+            &:last-child::after {
+                border-bottom: 1px solid $gray;
+                bottom: 0;
+                content: "";
+                left: 0;
+                position: absolute;
+                right: 0;
+            }
+        }
+    }
+}
+
+/*
+    Vehicles
+*/
+.used-vehicles {
+    display: flex;
+    flex-wrap: wrap;
+    list-style: none;
+    margin: 0;
+    padding: 0;
+
+    img {
+        max-height: 50px;
+        max-width: 50px;
+    }
+
+    li {
+        margin-right: 5px;
+    }
+
+    li:last-child {
+        margin-right: 0;
+    }
+}
