--- a/onegov/winterthur/theme/styles/winterthur.scss
+++ b/onegov/winterthur/theme/styles/winterthur.scss
@@ -405,17 +405,17 @@ table.responsive {
 /*
     Vehicles
 */
+img.vehicle-icon {
+    max-height: 50px;
+    max-width: 50px;
+}
+
 .used-vehicles {
     display: flex;
     flex-wrap: wrap;
     list-style: none;
     margin: 0;
     padding: 0;
-
-    img {
-        max-height: 50px;
-        max-width: 50px;
-    }
 
     li {
         margin-right: 5px;
