--- a/onegov/winterthur/theme/styles/winterthur.scss
+++ b/onegov/winterthur/theme/styles/winterthur.scss
@@ -410,6 +410,12 @@ img.vehicle-icon {
     max-width: 50px;
 }
 
+img.civil-defence-icon {
+    margin-top: 5px;
+    max-height: 22px;
+    max-width: 22px;
+}
+
 .used-vehicles {
     display: flex;
     flex-wrap: wrap;
