--- a/onegov/winterthur/theme/styles/winterthur.scss
+++ b/onegov/winterthur/theme/styles/winterthur.scss
@@ -573,23 +573,55 @@ table.responsive {
 .daycare-calculator-result {
     max-width: 700px;
 
-    .summary {
-        dl {
-            display: flex;
-            justify-content: space-between;
-        }
+    dl.summary {
+        display: flex;
+        justify-content: space-between;
 
-        dl div {
-            background: $green-pastel;
-            border: 1px solid $green-light;
-            border-radius: 2px;
+        div {
+            background: $white-smoke;
+            border: 1px solid $gainsboro;
+            border-radius: 3px;
+
             display: inline-block;
-            padding: 1rem;
+            padding: .5rem .75rem .75rem;
             width: calc(50% - .75rem);
-        }
 
-        dd {
-            margin-bottom: 0;
+            dt {
+                font-weight: normal;
+            }
+
+            dd {
+                border-radius: 3px;
+                display: inline-block;
+                font-weight: bold;
+                margin-bottom: 0;
+                padding: 0 .5rem;
+            }
+
+            &.success dd {
+                background: $green;
+                color: $white;
+
+                &::before {
+                    @include icon('\f058');
+                    margin-right: 1ex;
+                }
+            }
+
+            &.plain dd {
+                background: $gainsboro;
+                color: $body-font-color;
+            }
+
+            &.warning dd {
+                background: $yellow-dark;
+                color: $white;
+
+                &::before {
+                    @include icon('\f06a');
+                    margin-right: 1ex;
+                }
+            }
         }
     }
 
@@ -631,7 +663,7 @@ table.responsive {
 
         &:nth-child(4) {
             text-align: right;
-            width: 25%
+            width: 25%;
         }
     }
 }
