--- a/onegov/winterthur/theme/styles/winterthur.scss
+++ b/onegov/winterthur/theme/styles/winterthur.scss
@@ -529,7 +529,7 @@ table.responsive {
 */
 .daycare-calculator {
     form {
-        max-width: 700px;
+        max-width: 725px;
 
         .field-help {
             max-width: $max-line-width;
@@ -571,7 +571,7 @@ table.responsive {
 }
 
 .daycare-calculator-result {
-    max-width: 700px;
+    max-width: 725px;
 
     .panel.warning {
         background: $yellow-light;
@@ -593,7 +593,7 @@ table.responsive {
 
                 display: inline-block;
                 padding: .5rem .75rem .75rem;
-                width: calc(50% - .75rem);
+                width: calc(33% - .75rem);
 
                 @media #{$small-only} {
                     & {
@@ -620,11 +620,6 @@ table.responsive {
                 &.success dd {
                     background: $green;
                     color: $white;
-
-                    &::before {
-                        @include icon('\f058');
-                        margin-right: 1ex;
-                    }
                 }
 
                 &.plain dd {
@@ -632,14 +627,14 @@ table.responsive {
                     color: $body-font-color;
                 }
 
+                &.info dd {
+                    background: $blue-dark;
+                    color: $white;
+                }
+
                 &.warning dd {
                     background: $yellow-dark;
                     color: $white;
-
-                    &::before {
-                        @include icon('\f06a');
-                        margin-right: 1ex;
-                    }
                 }
             }
         }
