--- a/onegov/winterthur/theme/styles/winterthur.scss
+++ b/onegov/winterthur/theme/styles/winterthur.scss
@@ -527,10 +527,12 @@ table.responsive {
 /*
     Daycare calculator
 */
-.daycare-calculator {
-    form {
-        max-width: 725px;
 
+
+.daycare-calculator {
+    max-width: 725px;
+
+    form {
         .field-help {
             max-width: $max-line-width;
         }
@@ -568,10 +570,106 @@ table.responsive {
             }
         }
     }
+
+    .privacy-notice {
+        font-size: .875rem;
+    }
 }
 
 .daycare-calculator-result {
     max-width: 725px;
+
+    .show-details {
+        background: $gray-ultra-light;
+        border-bottom: 2px solid $gray;
+        color: $body-font-color;
+        display: block;
+        font-size: .875rem;
+        margin-bottom: 1rem;
+        padding: .5rem;
+
+        &.toggled {
+            border-bottom: 0;
+            margin-bottom: 0;
+        }
+
+        &::before {
+            @include icon('\f055');
+            color: $gray-dark;
+            margin-right: 1ex;
+        }
+
+        &.toggled::before {
+            content: '\f056';
+        }
+
+        &:hover {
+            color: $anchor-font-color;
+        }
+    }
+
+    .show-details.toggled + .calculation-details {
+        border-bottom-color: $gray;
+        border-top: 0;
+    }
+
+    .calculation-explanation {
+        font-size: .875rem;
+
+        p:last-child {
+            margin-bottom: 0;
+        }
+    }
+
+    .calculation-details {
+        border: 2px solid $gray-ultra-light;
+        margin-bottom: 1rem;
+        padding: 1rem;
+
+        @media #{$small-only} {
+            padding: 0;
+            border-width: 2px 0 2px 0;
+        }
+
+        h2 {
+            font-size: $h3-font-size;
+        }
+
+        table {
+            width: 100%;
+        }
+
+        table.summary-agenda {
+            border: 0;
+
+            td {
+                background: transparent;
+                border: 0;
+            }
+
+            td:nth-child(1) {
+                width: 24.5%;
+            }
+
+            td:nth-child(2) {
+                width: 50.5%;
+            }
+
+            td:nth-child(3) {
+                text-align: right;
+                white-space: nowrap;
+                width: 20%;
+            }
+
+            tr:last-child {
+                td {
+                    border-bottom: 3px double $gainsboro;
+                    border-top: 1px solid $gainsboro;
+                    font-weight: bold;
+                }
+            }
+        }
+    }
 
     .panel.warning {
         background: $yellow-light;
@@ -627,12 +725,12 @@ table.responsive {
 
                     &:nth-child(1)::after,
                     &:nth-child(2)::after {
-                        position: absolute;
-                        top: 5rem;
                         display: block;
-                        width: 100%;
-                        text-align: center;
+                        position: absolute;
                         right: 0;
+                        text-align: center;
+                        top: 5rem;
+                        width: 100%;
                     }
                 }
 
@@ -661,37 +759,6 @@ table.responsive {
 
                 &.warning dd {
                     box-shadow: 0 4px 0 $orange;
-                }
-            }
-        }
-
-        table.summary-agenda {
-            border: 0;
-            width: 100%;
-
-            td {
-                background: transparent;
-                border: 0;
-            }
-
-            td:nth-child(1) {
-                width: 24.5%;
-            }
-
-            td:nth-child(2) {
-                width: 50.5%;
-            }
-
-            td:nth-child(3) {
-                text-align: right;
-                width: 20%;
-            }
-
-            tr:last-child {
-                td {
-                    border-bottom: 3px double $gainsboro;
-                    border-top: 1px solid $gainsboro;
-                    font-weight: bold;
                 }
             }
         }
@@ -735,7 +802,7 @@ table.responsive {
 
         &:nth-child(4) {
             text-align: right;
-            width: 25%;
+            width: 20%;
         }
     }
 }
