--- a/onegov/winterthur/theme/styles/winterthur.scss
+++ b/onegov/winterthur/theme/styles/winterthur.scss
@@ -714,6 +714,7 @@ table.responsive {
         dl.summary-amounts {
             display: flex;
             flex-wrap: wrap;
+            font-size: .9rem;
             justify-content: space-between;
 
             > div {
@@ -722,7 +723,7 @@ table.responsive {
                 border-radius: 3px;
                 display: inline-block;
                 line-height: 2rem;
-                padding: .5rem .75rem .75rem;
+                padding: .25rem .5rem .75rem;
                 position: relative;
                 width: calc(33% - .75rem);
 
